// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameAvatar Renders the initial and color for Doe 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-62a8ib-MuiAvatar-root"
  >
    D
  </div>
</DocumentFragment>
`;

exports[`NameAvatar Renders the initial and color for Fran 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-14dwd9t-MuiAvatar-root"
  >
    F
  </div>
</DocumentFragment>
`;

exports[`NameAvatar Renders the initial and color for John 1`] = `
<DocumentFragment>
  <div
    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ynqpk4-MuiAvatar-root"
  >
    J
  </div>
</DocumentFragment>
`;
